--- a/HELLOW_GIT/HELLOW_GIT.vcxproj
+++ b/HELLOW_GIT/HELLOW_GIT.vcxproj
@@ -110,6 +110,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Hellow_Git.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
